<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="322dp"
        android:layout_height="162dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/us" />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="163dp"
        android:autoLink="web"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:text="@string/user_name"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/qualification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_below="@id/user"
            android:layout_marginTop="210dp"
            android:text="@string/qualification_1"
            android:textAppearance="@android:style/TextAppearance"/>

        <TextView
            android:id="@+id/facebook"
            android:layout_width="378dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:autoLink="web"
            android:text="@string/facebook_1"
            android:textAppearance="@android:style/TextAppearance"/>


        <TextView
            android:id="@+id/twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/twitter_id"
            android:textAppearance="@android:style/TextAppearance"
            android:visibility="visible" />

        <TextView
            android:id="@+id/designation"
            android:layout_width="match_parent"
            android:layout_height="218dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:autoLink="email"
            android:text="@string/desinatio_n"
            android:textAppearance="@android:style/TextAppearance"/>

    </LinearLayout>


</RelativeLayout>